@@ -1,27 +1,24 @@
 package tobyspring.hellospring.exrate;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import tobyspring.hellospring.payment.ExRateProvider;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.math.BigDecimal;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.stream.Collectors;
 
 
 public class WebApiExRateProvider  implements ExRateProvider {
     @Override
     public BigDecimal getExRate(String currency) throws IOException {
-        URL url = new URL("https://open.er-api.com/v6/latest/" + currency);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+        URI uri = new URI("https://open.er-api.com/v6/latest/" + currency);
+        HttpURLConnection connection = (HttpURLConnection) uri.toURL().openConnection();
         BufferedReader br = new BufferedReader(new InputStreamReader(connection.getInputStream()));
 
         String response = br.lines().collect(Collectors.joining());
-
-//        System.out.println(response);
 
         br.close();
 
